# hopstation

./: .gitignore  .gitmodules  LICENSE  README.md
core/: FileHelpers.cpp  FileHelpers.h  Helpers.h  Log.cpp  RingBuffer.cpp  RingBuffer.h  hp_assert.cpp  hp_assert.h
data/: placeholder.txt
data/bios/: placeholder.txt
docs/: Compatibility.md  SPOILERS.md  UpgradingImGui.md
hopstation/: CMakeLists.txt  vcpkg.json
hopstation/scripts/: build-macos.sh  build.bat  gensln.bat  run_debug.sh  run_release.sh  vcpkg-arm64-osx.cmake  vcpkg-x64-osx.cmake
hopstation/shaders/: Rect.vert.hlsl  Texture.frag.hlsl  build-shaders-linux.sh  build-shaders-macos.sh  build-shaders.bat
hopstation/src/: AudioDevice.cpp  AudioDevice.h  HopStation.cpp  Host.cpp  Host.h  HostAudioBuffer.cpp  HostAudioBuffer.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
hopstation/src/GUI/: CDROMWindow.cpp  CDROMWindow.h  CDWindow.cpp  CDWindow.h  CPUWindow.cpp  CPUWindow.h  DMAWindow.cpp  DMAWindow.h  GPUWindow.cpp  GPUWindow.h  HostWindow.cpp  HostWindow.h  ImGuiDemoWindow.cpp  ImGuiDemoWindow.h  ImGuiWrap.cpp  ImGuiWrap.h  InsertDiscDialog.cpp  InsertDiscDialog.h  MemoryCardFileDialog.cpp  MemoryCardFileDialog.h  MemoryCardWindow.cpp  MemoryCardWindow.h  SPUWindow.cpp  SPUWindow.h  SideloadDialog.cpp  SideloadDialog.h  SnapshotDialog.cpp  SnapshotDialog.h
hopstation/src/imgui/: imconfig.h
psx/: BIOS.cpp  BIOS.h  Bus.cpp  Bus.h  CD.cpp  CD.h  CDROM.cpp  CDROM.h  Controller.cpp  Controller.h  ControllerPort.cpp  ControllerPort.h  DMA.cpp  DMA.h  GPU.cpp  GPU.h  GTE.cpp  GTE.h  INTC.cpp  INTC.h  MDEC.cpp  MDEC.h  MemoryCard.cpp  MemoryCard.h  R3000.cpp  R3000.h  R3000Dasm.cpp  R3000Dasm.h  RAM.cpp  RAM.h  SIO.cpp  SIO.h  SPU.cpp  SPU.h  Scheduler.cpp  Scheduler.h  Timers.cpp  Timers.h  Timing.h
psx-test/: CMakeLists.txt
psx-test/scripts/: build-macos.sh  run-cpu-tests.bat  run-cpu-tests.sh
psx-test/src/: psx-test.cpp
psx-utils/: R3000Utils.cpp  R3000Utils.h  Sideload.cpp  Sideload.h  Snapshot.cpp  Snapshot.h  TTYLogger.cpp  TTYLogger.h  VRAMConvert.cpp  VRAMConvert.h
